restored support of Java 8, made CoverageUtil more stable, bumped some deps, fix #127